--- a/WEBSITE HTML.html
+++ b/WEBSITE HTML.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Gasoek+One&family=Ruwudu:wght@400;500;600;700&display=swap" rel="stylesheet">
         <title>Arianne Mina Student Website</title>
-    </head>
+    </head>.
     <body></body>
      <!-- navigation --> 
      <nav>
         <a href="#header">home</a>
-        <a href="#about">about</a>
-        <a href="#skills">skills</a>
-        <a href="#work">work</a>
-        <a href="#faq">faq</a>
+        <div class="flex-nav">
+          <div><a href="#about">about</a></div>
+            <div><a href="#skills">skills</a></div>
+              <div><a href="#work">work</a></div>
+                <div> <a href="#faq">faq</a></div>
+        </div>
      </nav> 
      <!-- header -->
       <section id="header">
         <div>
-        <h1 class="head">ARIANNE MINA</h1></div>
+          <h2>Get to know</h2>
+        </div>
+        <div>
+        <h1 class="head">ARIANNE MINA</h1>
+        </div>
       </section>
      <!-- about -->
       <section id="about">
@@ -25,16 +35,37 @@
         </div>
       </section>
      <!-- skills -->
-      <section id="skills">
+      
+      <section  id="skills">
         <h2 class="subhead">MY SKILLS</h2>
+        <div class="flex-container">
+        <div><img src="images/photoshop-logo.png" alt="Photoshop Logo"></div>
+        <p>Photoshop</p>
+        <div><img src="images/Illustrator-logo.png" alt="Illustrator Logo"></div>
+        <p>Illustrator</p>
+        <div><img src="images/indesign-logo.png" alt="InDesign Logo"></div>
+        <p>InDesign</p>
+        <div><img src="images/comp-icon.svg" alt="Computer Icon"></div>
+        <p>3D Design</p>
+        <div><img src="images/vase-icon.jpg" alt="Vase Icon"></div>
+        <p>Ceramics</p>
+        <div><img src="images/camera-icon.svg" alt="Caamera Icon"></div>
+        <p>Photography</p>
+        </div>
       </section>
      <!-- work -->   
        <section id="work">
-        <H2 class="subhead"> MY WORK</H2>
-       </section>
+       <H2 class="subhead"> MY WORK</H2> 
+       <div>
+        <img src="images/BEAN-BAG.jpg" alt="Bean Bag">
+        <img src="images/STICKERS.jpg" alt="Stickers">
+        <img src="images/TOGO-CUP.jpg" alt="Togo Cups">
+       </div>
+      </section>
      <!-- faq -->  
       <section id="faq">
         <h2>F.A.Q.</h2>
+        <div>
         <h3>when will you be graduating sdsu?</h3>
         <p>I intended to graduate this May 2025!</p>
         <h3>what do you have planned after graduating?</h3>
@@ -43,7 +74,10 @@
         <p>My favorite class while attending SDSU was an expressive typography class I took as an elective. My Professor Yomar Agusto was a very expressive person and very passionate about the art of typography. I enjoyed learning calligraphy and being able to craft my own font from paper to screen. </p>
         <h3>what are you most proud of?</h3>
         <p>What I am most proud of is pushing through my degree despite many set backs. During my fall 2024 semester I encountered a professor who blatantly told me I would fail the class the second week into the semester. Having an anxiety disorder, and multiple mental health issues, I wanted to drop out many times with that instance being a very big deterrent to any motivation I held at the time. Luckily I was able to push through the darkness and hope to finish school by this year. </p>
+        </div>
       </section>
     <footer>
+      <div>
         <p>Copywrite © 2025, All Rights Reserved</p>
+      </div>
     </footer>
