--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Gasoek+One&family=Ruwudu:wght@400;500;600;700&display=swap" rel="stylesheet">
         <title>Arianne Mina Student Website</title>
     </head>
-    <body></body>
+    <body>
 
      <!-- navigation --> 
      <nav>
        <!-- <div class="flex-nav">  -->
         <div class="home"><a href="#header">home</a></div>
-        <div class="nav-float"> 
+        <div class="flex-nav"> 
         <div><a href="#about">about</a></div>
             <div><a href="#skills">skills</a></div>
               <div><a href="#work">work</a></div>
@@ -79,16 +79,18 @@
       <section id="faq">
         <h2>F.A.Q.</h2>
         <div class="prompts" style="text-align: justify;">
-        <h3>when will you be graduating sdsu?</h3>
-        <p>I intended to graduate this May 2025!</p>
-        <h3>what do you have planned after graduating?</h3>
-        <p>After graduating I am looking for jobs within my field such as applying to a multimedia firm in San Diego called Doctor Multimedia. I also intend to explore my options outside of my field such as applying to the Sony video game department.  </p>
-        <h3>what was your favorite class?</h3>
-        <p>My favorite class while attending SDSU was an expressive typography class I took as an elective. My Professor Yomar Agusto was a very expressive person and very passionate about the art of typography. I enjoyed learning calligraphy and being able to craft my own font from paper to screen. </p>
-        <h3>what are you most proud of?</h3>
-        <p>What I am most proud of is pushing through my degree despite many set backs. During my fall 2024 semester I encountered a professor who blatantly told me I would fail the class the second week into the semester. Having an anxiety disorder, and multiple mental health issues, I wanted to drop out many times with that instance being a very big deterrent to any motivation I held at the time. Luckily I was able to push through the darkness and hope to finish school by this year. </p>
+        <div><h3>when will you be graduating sdsu?</h3>
+        <p>I intended to graduate this May 2025!</p></div>
+        <div><h3>what do you have planned after graduating?</h3>
+        <p>After graduating I am looking for jobs within my field such as applying to a multimedia firm in San Diego called Doctor Multimedia. I also intend to explore my options outside of my field such as applying to the Sony video game department.  </p> </div>
+        <div><h3>what was your favorite class?</h3>
+        <p>My favorite class while attending SDSU was an expressive typography class I took as an elective. My Professor Yomar Agusto was a very expressive person and very passionate about the art of typography. I enjoyed learning calligraphy and being able to craft my own font from paper to screen. </p></div>
+        <div><h3>what are you most proud of?</h3>
+        <p>What I am most proud of is pushing through my degree despite many set backs. During my fall 2024 semester I encountered a professor who blatantly told me I would fail the class the second week into the semester. Having an anxiety disorder, and multiple mental health issues, I wanted to drop out many times with that instance being a very big deterrent to any motivation I held at the time. Luckily I was able to push through the darkness and hope to finish school by this year. </p> </div>
         </div>
       </section>
+    </body>
+
     <footer>
       <div>
         <p>Copywrite © 2025, All Rights Reserved</p>
